--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "valid-email",
-  "version": "0.0.2",
+  "name": "@resin.io/valid-email",
+  "version": "0.1.0",
   "description": "Test the validity of an email address",
-  "keywords": ["valid","email","test","validity","check"],
+  "keywords": ["valid", "email", "test", "validity", "check"],
   "author": "John Henry <john@iamjohnhenry.com>",
   "homepage": "https://github.com/johnhenry/valid-email",
   "scripts": {
-      "test": "expresso test/*"
-      },
-    "devDependencies":{
-        "expresso":"0.9.x"
+    "test": "echo 'Tests not implemented'"
   },
+  "devDependencies": {},
   "repository": {
     "type": "git",
-    "url": "git://github.com/johnhenry/valid-email.git"
+    "url": "git://github.com/resin-io-nodules/valid-email.git"
   },
   "main": "index",
-  "engines": { "node": "^0.8.x" }
+  "engines": {
+    "node": ">=0.8.0"
+  }
 }
