Rename npm package
Change-type: patch
Signed-off-by: Juan Cruz Viotti <juan@balena.io>

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@resin.io/valid-email",
+  "name": "@balena.io/valid-email",
   "version": "0.1.0",
   "description": "Test the validity of an email address",
   "keywords": ["valid", "email", "test", "validity", "check"],
